stuff/workshop_vscode_ssm_cf_2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Launch an EC2 instance with Visual Studio Code Server and AWS CLI

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC where the EC2 instance will be launched
  KeyPair:
    Description: SSH Keypair name
    Type: String
    Default: 'vockey'
  CodeServerPassword:
    Description: Password for Visual Studio Code Server
    Type: String
    Default: 'cniot'
    NoEcho: true
  OriginRequestPolicyId: 
    Type: String
    Description: origin request policy id
    Default: 216adef6-5c7f-47e4-b989-5492eafa07d3
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/canonical/ubuntu/server/jammy/stable/current/amd64/hvm/ebs-gp2/ami-id'


Resources:

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow code-server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VpcId

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyPair
      ImageId: !Ref LatestAmiId
      InstanceType: t3.large
      IamInstanceProfile: LabInstanceProfile
      SecurityGroupIds:
        - !GetAtt [InstanceSecurityGroup, GroupId]
      UserData:
        Fn::Base64:
          !Sub |
            Content-Type: multipart/mixed; boundary="//"
            MIME-Version: 1.0
              
            --//
            Content-Type: text/x-shellscript; charset="us-ascii"
            MIME-Version: 1.0
            Content-Transfer-Encoding: 7bit
            Content-Disposition: attachment; filename="userdata.txt"
              
            #!/bin/bash
            apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y curl nginx
            export HOME=/home/ubuntu
            curl -fsSL https://code-server.dev/install.sh | sh

            mkdir -p /home/ubuntu/.config/code-server/
            touch /home/ubuntu/.config/code-server/config.yaml
            cat <<EOF > /home/ubuntu/.config/code-server/config.yaml
            auth: password
            password: ${CodeServerPassword}
            bind-addr: 0.0.0.0:8080
            cert: false
            EOF

            # Install AWS Toolkit and Python extensions
            #su -c 'code-server --install-extension amazonwebwervices.aws-toolkit-vscode --verbose' ubuntu
            #su -c 'code-server --install-extension ms-python.python --verbose' ubuntu

            # workaround: install them from vsix files (https://github.com/coder/code-server/issues/7461)
            wget https://open-vsx.org/api/amazonwebservices/aws-toolkit-vscode/3.73.0/file/amazonwebservices.aws-toolkit-vscode-3.73.0.vsix -P /tmp
            su -c 'code-server --install-extension /tmp/amazonwebservices.aws-toolkit-vscode-3.73.0.vsix' ubuntu
            wget https://open-vsx.org/api/ms-python/python/2025.12.0/file/ms-python.python-2025.12.0.vsix -P /tmp
            su -c 'code-server --install-extension /tmp/ms-python.python-2025.12.0.vsix --verbose' ubuntu

            systemctl enable --now code-server@ubuntu


            # Install AWS CLI
            apt update
            apt install unzip -y
            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
            unzip awscliv2.zip
            ./aws/install

            #Install other tools
            apt install libssl-dev cmake build-essential jq python3-pip -y
            --//--
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VpcId
      InstanceId: !Ref EC2Instance

Outputs:
  InstanceId:
    Description: The instance ID
    Value: !Ref EC2Instance
  EIP:
    Description: The URL to access the instance through its elastic IP
    Value: !Join
      - ''
      - - 'http://'
        - !Ref ElasticIP
        - ':8080'
